--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Higher or Lower</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <h1>Higher or Lower</h1>
@@ -15,9 +16,13 @@
         <section id="playerOne">
             <h3>Player 1</h3>
             <div class="controls">
-                <button class="controlBtns">Higher</button>
-                <p>Points:</p>
-                <button class="controlBtns">Lower</button>
+                <label>Higher
+                    <input type="radio" class="controlBtns" id="player1High" />
+                </label>
+                <p>Points:<span id="player1Points">0</span></p>
+                <label>Lower
+                    <input type="radio" class="controlBtns" id="player1Low" />
+                </label>
             </div>
         </section>
         <section id="numberGen">
@@ -28,15 +33,19 @@
             </p>
             <div class="controls">
                 <button id="rollBtn">Roll Number</button>
-                <p id="roll">Roll me!</p>
+                <p id="roll">Roll Me!</p>
             </div>
         </section>
         <section id="playerTwo">
             <h3>Player 2</h3>
             <div class="controls">
-                <button class="controlBtns">Higher</button>
-                <p>Points:</p>
-                <button class="controlBtns">Lower</button>
+                <label>Higher
+                    <input type="radio" class="controlBtns" id="player2High" />
+                </label>
+                <p>Points:<span id="player2Points">0</span></p>
+                <label>Lower
+                    <input type="radio" class="controlBtns" id="player2Low" />
+                </label>
             </div>
         </section>
     </main>
@@ -45,10 +54,5 @@
         <h5>Copyright</h5>
     </footer>
 
-
-
-
-
     <script src="js/app.js"></script>
-</body>
-</html>
+</body></html>
