--- a/index.html
+++ b/index.html
@@ -4,42 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Higher or Lower</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <h1>Higher or Lower</h1>
     </header>
 
     <main>
-        <div class="selectors">
-            <a href="game.html">
-            <div class="selector">
-                <p class="icon">
-                    <i class="fa fa-play" aria-hidden="true"></i>
-                </p>
-                <p class="icon-text">
-                    Play the Game
-                </p>
+        <section id="playerOne">
+            <h3>Player 1</h3>
+            <div class="controls">
+                <label>Higher
+                    <input type="radio" class="controlBtns" id="player1High" />
+                </label>
+                <p>Points:<span id="player1Points">0</span></p>
+                <label>Lower
+                    <input type="radio" class="controlBtns" id="player1Low" />
+                </label>
             </div>
-            </a>
-            <a href="tutorial.html">
-            <div class="selector">
-                <p class="icon">
-                    <i class="fa fa-code" aria-hidden="true"></i>
-                </p>
-                <p class="icon-text">
-                    Learn to code it here
-                </p>
+        </section>
+        <section id="numberGen">
+            <h2>Community Number</h2>
+            <p id="explainer">
+                Roll a random number using the button below.<br>
+                Afterwards each player guess whether the next number is higher or lower.
+            </p>
+            <div class="controls">
+                <button id="rollBtn">Roll Number</button>
+                <p id="roll">Roll Me!</p>
             </div>
-            </a>
-        </div>
+        </section>
+        <section id="playerTwo">
+            <h3>Player 2</h3>
+            <div class="controls">
+                <label>Higher
+                    <input type="radio" class="controlBtns" id="player2High" />
+                </label>
+                <p>Points:<span id="player2Points">0</span></p>
+                <label>Lower
+                    <input type="radio" class="controlBtns" id="player2Low" />
+                </label>
+            </div>
+        </section>
     </main>
 
     <footer>
-        <p>Copyright</p>
+        <h5>Copyright</h5>
     </footer>
-    
-</body>
-</html>
+
+    <script src="js/app.js"></script>
+</body></html>
